--- a/index.html
+++ b/index.html
@@ -79,3 +79,6 @@ SleepOnYourOwnTime
 <img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73301154-e260f300-41d7-11ea-91d8-be5d7f02ed0e.jpeg">
 </div>
 <div class="
+$ git add .
+$ git commit -m "customizing index.html for AgilePhd"
+$ git push
