--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ SleepOnYourOwnTime
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Memorial | Welcome</title>
+<title>Pillow Supprt | Welcome</title>
 <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 </head>
 <body>
@@ -14,9 +14,9 @@ SleepOnYourOwnTime
 <div class="top-bar">
 <div class="top-bar-left">
 <ul class="menu">
-<li class="menu-text">Mamba Memorial</li>
-<li><a href="#">Kobe Bryant</a></li>
-<li><a href="#">Gianna Bryant</a></li>
+<li class="menu-text">S</li>
+<li><a href="#">Feather</a></li>
+<li><a href="#">Tempurpedic</a></li>
 </ul>
 </div>
 <div class="top-bar-right">
@@ -27,8 +27,8 @@ SleepOnYourOwnTime
 
 <div class="callout large">
 <div class="row column text-center">
-<h1>Remembering a Legend</h1>
-<p class="lead">Those who are dead may never die.</p>
+<h1>Perfect Pillow</h1>
+<p class="lead">25.</p>
 <a href="#" class="button large">Learn More</a>
 <a href="#" class="button large hollow">Learn Less</a>
 </div>
@@ -38,44 +38,31 @@ SleepOnYourOwnTime
 <img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73287538-ff3cfc80-41be-11ea-850b-e39f4dc539d4.jpg">
 </div>
 <div class="medium-6 columns medium-pull-6">
-<h2>The Life of a Legend</h2>
-<p>In a 2008 interview, he spoke to his positive attitude. “Have a good time. Life is too short to get bogged down and be discouraged. You have to keep moving. You have to keep going. Put one foot in front of the other, smile and just keep on rolling.-Kobe Bryant"</p>
+<h2>Pillows</h2>
+<p>The Perfect nights rest</p>
 </div>
 </div>
 <div class="row">
 <div class="medium-4 columns">
-<h3>NBA Career</h3>
-<p>This remarkable player was named ‘NBA Most Valuable Player’ in 2008. He has won the ‘NBA Finals MVP’ on two occasions.He led his team to victory in the ‘NBA Finals’ on five occasions. Bryant was named the ‘NBA All-Star’ on 18 occasions. He was also named ‘NBA All-Star Game MVP’ on four occasions. Just recently,he was passed by Lebron James for all-time scorrer and is now ranked at number 4 with 33643 points over a time of 20 seasons.</p>
+<h3>Level of Comfort</h3>
+<p>Soft, sturdy, neck support.</p>
 </div>
 <div class="medium-4 columns">
-<h3>After the NBA</h3>
-<p>After Kobe Bryant's retirement due to a torn achilles, the former NBA star continued to be a role model. Kobe "Bean" Bryant was not just an athlete but an artist on and off the court. In his announcment of his retirement he wrote and directed an Oscor Winning short-film called 'Dear Basketball', in which he thanks basketball for giving him an oppotunity to play the game he loves.</p>
+<h3>Sleep Durations</h3>
+<p>All night, early morning, late night.</p>
 </div>
 <div class="medium-4 columns">
-<h3>The Best Dad</h3>
-<p>Kobe was not just a rolemodel for athletes, he was a rolemodel for his kids most of all. Kobe love for his daughters was never a question. Gianna and Kobe were often seen laughing or talking basketball strategies on the side of the court during NBA games. He loved his daughters and knew that were strong. Kobe recalled in an interview one time when he was asked by a fan if he was upset with not having a boy to continue his legacy, Gianna turned around and told the fan "Don't worry I got this" </p>
+<h3>Sleep positions</h3>
+<p>On side, On back, On stomach </p>
 </div>
 </div>
 <hr>
-<div class="row column">
-<ul class="vertical medium-horizontal menu expanded text-center">
-<li><a href="#"><div class="stat">20</div><span>Seasons Played</span></a></li>
-<li><a href="#"><div class="stat">5</div><span>Championships</span></a></li>
-<li><a href="#"><div class="stat">Countless</div><span>People Touched</span></a></li>
+
 </ul>
 </div>
 <hr>
 <div class="row column">
 <h3>Photos</h3>
 </div>
-<div class="row medium-up-3 large-up-4">
-<div class="column">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73301074-c0677080-41d7-11ea-8d26-cb7d93f7e8cd.jpeg">
-</div>
-<div class="column">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73301128-d6753100-41d7-11ea-816b-05998baca6e8.jpeg">
-</div>
-<div class="column">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73301154-e260f300-41d7-11ea-91d8-be5d7f02ed0e.jpeg">
 </div>
 <div class="
