--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ SleepOnYourOwnTime
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Pillow Supprt | Welcome</title>
-<link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+<link rel="stylesheet" href="">
 </head>
 <body>
 
@@ -35,7 +35,7 @@ SleepOnYourOwnTime
 </div>
 <div class="row">
 <div class="medium-6 columns medium-push-6">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73287538-ff3cfc80-41be-11ea-850b-e39f4dc539d4.jpg">
+<img class="thumbnail" src="">
 </div>
 <div class="medium-6 columns medium-pull-6">
 <h2>Pillows</h2>
