--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ SleepOnYourOwnTime
 <div class="top-bar">
 <div class="top-bar-left">
 <ul class="menu">
-<li class="menu-text">S</li>
+<li class="menu-text">SleepOnYourOwnTime</li>
 <li><a href="#">Feather</a></li>
 <li><a href="#">Tempurpedic</a></li>
 </ul>
@@ -62,7 +62,7 @@ SleepOnYourOwnTime
 </div>
 <hr>
 <div class="row column">
-<h3>Photos</h3>
+<h3>Copyright SleepOnYourOwnTime</h3>
 </div>
 </div>
 <div class="
