--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ SleepOnYourOwnTime
 <div class="top-bar-left">
 <ul class="menu">
 <li class="menu-text">SleepOnYourOwnTime</li>
-<li><a href="#">Feather</a></li>
+<li><a href="#">Feather</a>![image](https://user-images.githubusercontent.com/71102554/93273114-b1d8c400-f77c-11ea-9de5-34daee06a95f.png)
+</li>
 <li><a href="#">Tempurpedic</a></li>
 </ul>
 </div>
