--- a/index.html
+++ b/index.html
@@ -1,69 +1,88 @@
-<html>
-<body>
-SleepOnYourOwnTime
 <!doctype html>
 <html class="no-js" lang="en">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Pillow Supprt | Welcome</title>
-<link rel="stylesheet" href="">
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Foundation | Welcome</SleepOnYourOwnTime>
+    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+  </head>
+  <body>
 
-<div class="top-bar">
-<div class="top-bar-left">
-<ul class="menu">
-<li class="menu-text">SleepOnYourOwnTime</li>
-<li><a href="#">Feather</a>![image](https://user-images.githubusercontent.com/71102554/93273114-b1d8c400-f77c-11ea-9de5-34daee06a95f.png)
-</li>
-<li><a href="#">Tempurpedic</a></li>
-</ul>
-</div>
-<div class="top-bar-right">
-<ul class="menu">
-</ul>
-</div>
-</div>
+    <!-- Start Top Bar -->
+    <div class="top-bar">
+      <div class="top-bar-left">
+        <ul class="menu">
+          <li class="menu-text">Blog</li>
+          <li><a href="#">One</a></li>
+          <li><a href="#">Two</a></li>
+          <li><a href="#">Three</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- End Top Bar -->
 
-<div class="callout large">
-<div class="row column text-center">
-<h1>Perfect Pillow</h1>
-<p class="lead">25.</p>
-<a href="#" class="button large">Learn More</a>
-<a href="#" class="button large hollow">Learn Less</a>
-</div>
-</div>
-<div class="row">
-<div class="medium-6 columns medium-push-6">
-<img class="thumbnail" src="">
-</div>
-<div class="medium-6 columns medium-pull-6">
-<h2>Pillows</h2>
-<p>The Perfect nights rest</p>
-</div>
-</div>
-<div class="row">
-<div class="medium-4 columns">
-<h3>Level of Comfort</h3>
-<p>Soft, sturdy, neck support.</p>
-</div>
-<div class="medium-4 columns">
-<h3>Sleep Durations</h3>
-<p>All night, early morning, late night.</p>
-</div>
-<div class="medium-4 columns">
-<h3>Sleep positions</h3>
-<p>On side, On back, On stomach </p>
-</div>
-</div>
-<hr>
+    <div class="callout large primary">
+      <div class="row column text-center">
+        <h1>SleepOnYourOwnTime</h1>
+        <h2 class="subheader">The Best Sleep On Earth</h2>
+      </div>
+    </div>
 
-</ul>
-</div>
-<hr>
-<div class="row column">
-<h3>Copyright SleepOnYourOwnTime</h3>
-</div>
-</div>
-<div class="
+    <!-- We can now combine rows and columns when there's only one column in that row -->
+    <div class="row medium-8 large-7 columns">
+      <div class="blog-post">
+        <h3>Styles of Pillows <small>3/6/2015</small></h3>
+        <img class="thumbnail" src="https://placehold.it/850x350">
+        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+        <div class="callout">
+          <ul class="menu simple">
+            <li><a href="#">Author: Mike Mikers</a></li>
+            <li><a href="#">Comments: 3</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="blog-post">
+        <h3>Awesome blog post title <small>3/6/2015</small></h3>
+        <img class="thumbnail" src="https://placehold.it/850x350">
+        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+        <div class="callout">
+          <ul class="menu simple">
+            <li><a href="#">Author: Mike Mikers</a></li>
+            <li><a href="#">Comments: 3</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="blog-post">
+        <h3>Awesome blog post title <small>3/6/2015</small></h3>
+        <img class="thumbnail" src="https://placehold.it/850x350">
+        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+        <div class="callout">
+          <ul class="menu simple">
+            <li><a href="#">Author: Mike Mikers</a></li>
+            <li><a href="#">Comments: 3</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="blog-post">
+        <h3>Awesome blog post title <small>3/6/2015</small></h3>
+        <img class="thumbnail" src="https://placehold.it/850x350">
+        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+        <div class="callout">
+          <ul class="menu simple">
+            <li><a href="#">Author: Grant Smith</a></li>
+            <li><a href="#">Comments: 3</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
+  </body>
+</html>
