--- a/index.html
+++ b/index.html
@@ -32,43 +32,46 @@
     <div class="row medium-8 large-7 columns">
       <div class="blog-post">
         <h3>Styles of Pillows <small>3/6/2015</small></h3>
-        <img class="thumbnail" src="https://placehold.it/850x350">
+        <img class="thumbnail" src="![image](https://user-images.githubusercontent.com/71102554/93273114-b1d8c400-f77c-11ea-9de5-34daee06a95f.png)">
         <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
         <div class="callout">
           <ul class="menu simple">
-            <li><a href="#">Author: Mike Mikers</a></li>
+            <li><a href="#">Author: Grant Smith</a></li>
             <li><a href="#">Comments: 3</a></li>
           </ul>
         </div>
       </div>
 
       <div class="blog-post">
-        <h3>Awesome blog post title <small>3/6/2015</small></h3>
-        <img class="thumbnail" src="https://placehold.it/850x350">
+        <h3>Soft Pillows <small>3/6/2015</small></h3>
+        <img class="thumbnail" src="![image](https://user-images.githubusercontent.com/71102554/93273531-adf97180-f77d-11ea-9c6b-4364c0bdb039.png)
+">
         <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
         <div class="callout">
           <ul class="menu simple">
-            <li><a href="#">Author: Mike Mikers</a></li>
+            <li><a href="#">Author: Grant Smith</a></li>
             <li><a href="#">Comments: 3</a></li>
           </ul>
         </div>
       </div>
 
       <div class="blog-post">
-        <h3>Awesome blog post title <small>3/6/2015</small></h3>
-        <img class="thumbnail" src="https://placehold.it/850x350">
-        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
+        <h3>Feather Pillows <small>3/6/2015</small></h3>
+        <img class="thumbnail" src="![image](https://user-images.githubusercontent.com/71102554/93273653-fe70cf00-f77d-11ea-90ab-989f7ead4a65.png)
+">
+        <p>Feather Pillows with feathers inside.</p>
         <div class="callout">
           <ul class="menu simple">
-            <li><a href="#">Author: Mike Mikers</a></li>
+            <li><a href="#">Author:Grant Smith</a></li>
             <li><a href="#">Comments: 3</a></li>
           </ul>
         </div>
       </div>
 
       <div class="blog-post">
-        <h3>Awesome blog post title <small>3/6/2015</small></h3>
-        <img class="thumbnail" src="https://placehold.it/850x350">
+        <h3>TempurPedic <small>3/6/2015</small></h3>
+        <img class="thumbnail" src="![image](https://user-images.githubusercontent.com/71102554/93273592-d2554e00-f77d-11ea-9c13-b87ce2e21019.png)
+">
         <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
         <div class="callout">
           <ul class="menu simple">
