--- a/index.html
+++ b/index.html
@@ -1,91 +1,81 @@
+<html>
+<body>
+ Kobe Bryant
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome SleepOnYourOwnTime
-    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-  </head>
-  <body>
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Life | Welcome</title>
+<link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+</head>
+<body>
 
-    <!-- Start Top Bar -->
-    <div class="top-bar">
-      <div class="top-bar-left">
-        <ul class="menu">
-          <li class="menu-text">Blog</li>
-          <li><a href="#">One</a></li>
-          <li><a href="#">Two</a></li>
-          <li><a href="#">Three</a></li>
-        </ul>
-      </div>
-    </div>
-    <!-- End Top Bar -->
+<div class="top-bar">
+<div class="top-bar-left">
+<ul class="menu">
+<li class="menu-text">THE BLACK MAMBA</li>
+<li><a href="#">Basketball life</a></li>
+<li><a href="#">Personal Life</a></li>
+</ul>
+</div>
+<div class="top-bar-right">
+<ul class="menu">
+</ul>
+</div>
+</div>
 
-    <div class="callout large primary">
-      <div class="row column text-center">
-        <h1>SleepOnYourOwnTime</h1>
-        <h2 class="subheader">The Best Sleep On Earth</h2>
-      </div>
-    </div>
-
-    <!-- We can now combine rows and columns when there's only one column in that row -->
-    <div class="row medium-8 large-7 columns">
-      <div class="blog-post">
-        <h3>Styles of Pillows <small>3/6/2015</small></h3>
-        <img class="thumbnail" src="![image](https://user-images.githubusercontent.com/71102554/93273114-b1d8c400-f77c-11ea-9de5-34daee06a95f.png)">
-        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
-        <div class="callout">
-          <ul class="menu simple">
-            <li><a href="#">Author: Grant Smith</a></li>
-            <li><a href="#">Comments: 3</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="blog-post">
-        <h3>Soft Pillows <small>3/6/2015</small></h3>
-        <img class="thumbnail" src="![image](https://user-images.githubusercontent.com/71102554/93273531-adf97180-f77d-11ea-9c6b-4364c0bdb039.png)
-">
-        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
-        <div class="callout">
-          <ul class="menu simple">
-            <li><a href="#">Author: Grant Smith</a></li>
-            <li><a href="#">Comments: 3</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="blog-post">
-        <h3>Feather Pillows <small>3/6/2015</small></h3>
-        <img class="thumbnail" src="![image](https://user-images.githubusercontent.com/71102554/93273653-fe70cf00-f77d-11ea-90ab-989f7ead4a65.png)
-">
-        <p>Feather Pillows with feathers inside.</p>
-        <div class="callout">
-          <ul class="menu simple">
-            <li><a href="#">Author:Grant Smith</a></li>
-            <li><a href="#">Comments: 3</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="blog-post">
-        <h3>TempurPedic <small>3/6/2015</small></h3>
-        <img class="thumbnail" src="![image](https://user-images.githubusercontent.com/71102554/93273592-d2554e00-f77d-11ea-9c13-b87ce2e21019.png)
-">
-        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
-        <div class="callout">
-          <ul class="menu simple">
-            <li><a href="#">Author: Grant Smith</a></li>
-            <li><a href="#">Comments: 3</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
-</html>
+<div class="callout large">
+<div class="row column text-center">
+<h1>LEGEND STATUS</h1>
+<p class="lead">A life worth living.</p>
+<a href="#" class="button large">Learn More</a>
+<a href="#" class="button large hollow">Learn Less</a>
+</div>
+</div>
+<div class="row">
+<div class="medium-6 columns medium-push-6">
+<img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73287538-ff3cfc80-41be-11ea-850b-e39f4dc539d4.jpg">
+</div>
+<div class="medium-6 columns medium-pull-6">
+<h2>Basketball Legend</h2>
+<p>In a 2008 interview, he spoke to his positive attitude. “Have a good time. Life is too short to get bogged down and be discouraged. You have to keep moving. You have to keep going. Put one foot in front of the other, smile and just keep on rolling.-Kobe Bryant"</p>
+</div>
+</div>
+<div class="row">
+<div class="medium-4 columns">
+<h3>NBA</h3>
+<p>This remarkable player was named ‘NBA Most Valuable Player’ in 2008. He has won the ‘NBA Finals MVP’ on two occasions.He led his team to victory in the ‘NBA Finals’ on five occasions. Bryant was named the ‘NBA All-Star’ on 18 occasions. He was also named ‘NBA All-Star Game MVP’ on four occasions. Just recently,he was passed by Lebron James for all-time scorrer and is now ranked at number 4 with 33643 points over a time of 20 seasons.</p>
+</div>
+<div class="medium-4 columns">
+<h3>POST NBA</h3>
+<p>After Kobe Bryant's retirement due to a torn achilles, the former NBA star continued to be a role model. Kobe "Bean" Bryant was not just an athlete but an artist on and off the court. In his announcment of his retirement he wrote and directed an Oscor Winning short-film called 'Dear Basketball', in which he thanks basketball for giving him an oppotunity to play the game he loves.</p>
+</div>
+<div class="medium-4 columns">
+<h3>Being a Father</h3>
+<p>Kobe was not just a rolemodel for athletes, he was a rolemodel for his kids most of all. Kobe love for his daughters was never a question. Gianna and Kobe were often seen laughing or talking basketball strategies on the side of the court during NBA games. He loved his daughters and knew that were strong. Kobe recalled in an interview one time when he was asked by a fan if he was upset with not having a boy to continue his legacy, Gianna turned around and told the fan "Don't worry I got this" </p>
+</div>
+</div>
+<hr>
+<div class="row column">
+<ul class="vertical medium-horizontal menu expanded text-center">
+<li><a href="#"><div class="stat">20</div><span>Seasons Played</span></a></li>
+<li><a href="#"><div class="stat">5</div><span>Championships</span></a></li>
+<li><a href="#"><div class="stat">Countless</div><span>People Touched</span></a></li>
+</ul>
+</div>
+<hr>
+<div class="row column">
+<h3>Photos</h3>
+</div>
+<div class="row medium-up-3 large-up-4">
+<div class="column">
+<img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73301074-c0677080-41d7-11ea-8d26-cb7d93f7e8cd.jpeg">
+</div>
+<div class="column">
+<img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73301128-d6753100-41d7-11ea-816b-05998baca6e8.jpeg">
+</div>
+<div class="column">
+<img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73301154-e260f300-41d7-11ea-91d8-be5d7f02ed0e.jpeg">
+</div>
+<div class="
