--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="callout large">
 <div class="row column text-center">
 <h1>LEGEND STATUS</h1>
-<p class="lead">A life worth living.</p>
+<p class="lead">8/24.</p>
 <a href="#" class="button large">Learn More</a>
 <a href="#" class="button large hollow">Learn Less</a>
 </div>
@@ -39,7 +39,7 @@
 </div>
 <div class="medium-6 columns medium-pull-6">
 <h2>Basketball Legend</h2>
-<p>In a 2008 interview, he spoke to his positive attitude. “Have a good time. Life is too short to get bogged down and be discouraged. You have to keep moving. You have to keep going. Put one foot in front of the other, smile and just keep on rolling.-Kobe Bryant"</p>
+<p>Kobe Bryant was a legend that will live on forever for the Los Angeles Lakers"</p>
 </div>
 </div>
 <div class="row">
@@ -59,14 +59,14 @@
 <hr>
 <div class="row column">
 <ul class="vertical medium-horizontal menu expanded text-center">
-<li><a href="#"><div class="stat">20</div><span>Seasons Played</span></a></li>
-<li><a href="#"><div class="stat">5</div><span>Championships</span></a></li>
-<li><a href="#"><div class="stat">Countless</div><span>People Touched</span></a></li>
+<li><a href="#"><div class="stat">29321</div><span>Points</span></a></li>
+<li><a href="#"><div class="stat">2943</div><span>Rebounds</span></a></li>
+<li><a href="#"><div class="stat">2341</div><span>Threes</span></a></li>
 </ul>
 </div>
 <hr>
 <div class="row column">
-<h3>Photos</h3>
+<h3>Highlights</h3>
 </div>
 <div class="row medium-up-3 large-up-4">
 <div class="column">
