--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 <div class="row">
 <div class="medium-6 columns medium-push-6">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73287538-ff3cfc80-41be-11ea-850b-e39f4dc539d4.jpg">
+<img class="thumbnail" src="![image](https://user-images.githubusercontent.com/71102554/93275068-80162c00-f781-11ea-81d3-31318c39240a.png)">
 </div>
 <div class="medium-6 columns medium-pull-6">
 <h2>Basketball Legend</h2>
@@ -45,7 +45,7 @@
 <div class="row">
 <div class="medium-4 columns">
 <h3>NBA</h3>
-<p>This remarkable player was named ‘NBA Most Valuable Player’ in 2008. He has won the ‘NBA Finals MVP’ on two occasions.He led his team to victory in the ‘NBA Finals’ on five occasions. Bryant was named the ‘NBA All-Star’ on 18 occasions. He was also named ‘NBA All-Star Game MVP’ on four occasions. Just recently,he was passed by Lebron James for all-time scorrer and is now ranked at number 4 with 33643 points over a time of 20 seasons.</p>
+<p>Kobe has multiple NBA Championships and has been nicknamed "Black Mamba".</p>
 </div>
 <div class="medium-4 columns">
 <h3>POST NBA</h3>
