--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </div>
 <div class="row medium-up-3 large-up-4">
 <div class="column">
-<img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73301074-c0677080-41d7-11ea-8d26-cb7d93f7e8cd.jpeg">
+<img class="thumbnail" src="![image](https://user-images.githubusercontent.com/71102554/93275178-d4b9a700-f781-11ea-9490-2fed3a6c8aa0.png)">
 </div>
 <div class="column">
 <img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73301128-d6753100-41d7-11ea-816b-05998baca6e8.jpeg">
