--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 <div class="row">
 <div class="medium-6 columns medium-push-6">
-<img class="thumbnail" src="![image](https://user-images.githubusercontent.com/71102554/93275068-80162c00-f781-11ea-81d3-31318c39240a.png)">
+<img class="thumbnail" src="https://user-images.githubusercontent.com/71102554/93275068-80162c00-f781-11ea-81d3-31318c39240a.png">
 </div>
 <div class="medium-6 columns medium-pull-6">
 <h2>Basketball Legend</h2>
@@ -70,7 +70,7 @@
 </div>
 <div class="row medium-up-3 large-up-4">
 <div class="column">
-<img class="thumbnail" src="![image](https://user-images.githubusercontent.com/71102554/93275178-d4b9a700-f781-11ea-9490-2fed3a6c8aa0.png)">
+<img class="thumbnail" src="https://user-images.githubusercontent.com/71102554/93275178-d4b9a700-f781-11ea-9490-2fed3a6c8aa0.png">
 </div>
 <div class="column">
 <img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73301128-d6753100-41d7-11ea-816b-05998baca6e8.jpeg">
