--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 <div class="medium-6 columns medium-pull-6">
 <h2>Basketball Legend</h2>
-<p>Kobe Bryant was a legend that will live on forever for the Los Angeles Lakers"</p>
+<p>Kobe Bryant was a legend that will live on forever for the Los Angeles Lakers</p>
 </div>
 </div>
 <div class="row">
@@ -49,11 +49,11 @@
 </div>
 <div class="medium-4 columns">
 <h3>POST NBA</h3>
-<p>After Kobe Bryant's retirement due to a torn achilles, the former NBA star continued to be a role model. Kobe "Bean" Bryant was not just an athlete but an artist on and off the court. In his announcment of his retirement he wrote and directed an Oscor Winning short-film called 'Dear Basketball', in which he thanks basketball for giving him an oppotunity to play the game he loves.</p>
+<p>Kobe passed a few years after his retirement</p>
 </div>
 <div class="medium-4 columns">
 <h3>Being a Father</h3>
-<p>Kobe was not just a rolemodel for athletes, he was a rolemodel for his kids most of all. Kobe love for his daughters was never a question. Gianna and Kobe were often seen laughing or talking basketball strategies on the side of the court during NBA games. He loved his daughters and knew that were strong. Kobe recalled in an interview one time when he was asked by a fan if he was upset with not having a boy to continue his legacy, Gianna turned around and told the fan "Don't worry I got this" </p>
+<p>He was known for his love for his daughters </p>
 </div>
 </div>
 <hr>
