--- a/index.html
+++ b/index.html
@@ -77,3 +77,27 @@
 </div>
 <div class="column">
 <img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73301154-e260f300-41d7-11ea-91d8-be5d7f02ed0e.jpeg">
+    
+        <hr>
+    </article>
+    <article class="grid-container">
+        <div class="row column">
+          <ul class="menu">
+            <li><a href="#">One</a></li>
+            <li><a href="#">Two</a></li>
+            <li><a href="#">Three</a></li>
+            <li><a href="#">Four</a></li>
+          </ul>
+        </div>
+    </article>
+    
+
+
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.2.3/motion-ui.min.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
+  </body>
+</html>
