--- a/index.html
+++ b/index.html
@@ -77,16 +77,21 @@
 </div>
 <div class="column">
 <img class="thumbnail" src="https://user-images.githubusercontent.com/59981303/73301154-e260f300-41d7-11ea-91d8-be5d7f02ed0e.jpeg">
+ </div>
+<div class="cell">
+<img class="thumbnail" src="https://user-images.githubusercontent.com/71102554/93275823-92916500-f783-11ea-99e4-03580d2646b5.png">
+ </div>
+ </div>
     
         <hr>
     </article>
     <article class="grid-container">
         <div class="row column">
           <ul class="menu">
-            <li><a href="#">One</a></li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
-            <li><a href="#">Four</a></li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
           </ul>
         </div>
     </article>
