--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body>
+</body>
  Kobe Bryant
 <!doctype html>
 <html class="no-js" lang="en">
@@ -9,7 +9,7 @@
 <title>Life | Welcome</title>
 <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 </head>
-<body>
+</body>
 
 <div class="top-bar">
 <div class="top-bar-left">
